src/zenoh_dart.h

/// Performs a get query on the given selector.
///
/// Replies are posted to the Dart isolate via the given native port.
///
/// @param session        Const pointer to a loaned session (as uint8_t*).
/// @param selector       Null-terminated selector string.
/// @param port           The Dart native port to post replies to.
/// @param target         Query target (0=bestMatching, 1=all, 2=allComplete).
/// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
/// @param payload        Pointer to z_owned_bytes_t (NULL = no payload).
///                       Consumed via z_bytes_move if non-NULL.
/// @param encoding       MIME type string (NULL = default).
/// @param timeout_ms     Timeout in milliseconds.
/// @param parameters     Additional query parameters (NULL = none).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_get(
    const uint8_t* session,
    const char* selector,
    int64_t port,
    int8_t target,
    int8_t consolidation,
    uint8_t* payload,
    const char* encoding,
    uint64_t timeout_ms,
    const char* parameters);
/// Tries to receive a sample from the ring handler.
///
/// Return codes: 0=sample available, 1=channel disconnected, 2=buffer empty.
/// When 0, all out_ parameters are populated (malloc'd; caller must free).
///
/// @param handler           Const pointer to an owned ring handler (as uint8_t*).
/// @param out_keyexpr       Out: malloc'd null-terminated key expression string.
/// @param out_payload       Out: malloc'd payload bytes.
/// @param out_payload_len   Out: payload length.
/// @param out_kind          Out: sample kind (0=put, 1=delete).
/// @param out_encoding      Out: malloc'd null-terminated encoding string (or NULL).
/// @param out_attachment     Out: malloc'd attachment bytes (or NULL).
/// @param out_attachment_len Out: attachment length.
/// @return 0=sample, 1=disconnected, 2=empty.
FFI_PLUGIN_EXPORT int8_t zd_pull_subscriber_try_recv(
    const uint8_t* handler,
    char** out_keyexpr, uint8_t** out_payload, int32_t* out_payload_len,
    int8_t* out_kind, char** out_encoding,
    uint8_t** out_attachment, int32_t* out_attachment_len);
/// Drops (frees) the ring handler.
///
/// @param handler  Pointer to a z_owned_ring_handler_sample_t (as uint8_t*).
FFI_PLUGIN_EXPORT void zd_ring_handler_sample_drop(uint8_t* handler);
// ---------------------------------------------------------------------------
// Querier
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_querier_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_querier_sizeof(void);
/// Declares a querier on the given key expression.
///
/// @param querier_out    Pointer to uninitialized z_owned_querier_t (as uint8_t*).
/// @param session        Pointer to a loaned session (as uint8_t*).
/// @param key_expr       Null-terminated key expression string.
/// @param target         Query target (z_query_target_t value).
/// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
/// @param timeout_ms     Timeout in milliseconds (0 = default).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_declare_querier(
    uint8_t* querier_out, const uint8_t* session,
    const char* key_expr, int8_t target,
    int8_t consolidation, uint64_t timeout_ms);
/// Drops (frees) the querier.
///
/// @param querier  Pointer to a z_owned_querier_t (as uint8_t*).
FFI_PLUGIN_EXPORT void zd_querier_drop(uint8_t* querier);
/// Sends a query via a declared querier.
///
/// Replies are delivered asynchronously to the Dart NativePort.
/// Reuses the same reply callback as zd_get.
///
/// @param querier     Pointer to a z_owned_querier_t (as uint8_t*).
/// @param parameters  Optional query parameters string (NULL for none).
/// @param port        Dart NativePort for reply callbacks.
/// @param payload     Optional z_owned_bytes_t* (consumed if non-NULL).
/// @param encoding    Optional encoding string (NULL for none).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_querier_get(
    const uint8_t* querier, const char* parameters,
    int64_t port, uint8_t* payload, const char* encoding);
/// Declares a background matching listener for a querier.
///
/// Reuses the same matching status callback and drop function as publisher.
///
/// @param querier    Pointer to a z_owned_querier_t (as uint8_t*).
/// @param port       Dart NativePort for matching status callbacks.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_querier_declare_background_matching_listener(
    const uint8_t* querier, int64_t port);
/// Gets the current matching status of a querier.
///
/// @param querier        Pointer to a z_owned_querier_t (as uint8_t*).
/// @param matching_out   Output: 1 if matching queryables exist, 0 otherwise.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_querier_get_matching_status(
    const uint8_t* querier, int8_t* matching_out);
// ---------------------------------------------------------------------------
// Liveliness
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_liveliness_token_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_liveliness_token_sizeof(void);
/// Declares a liveliness token on the given key expression.
///
/// @param token_out  Pointer to an uninitialized z_owned_liveliness_token_t (as uint8_t*).
/// @param session    Const pointer to a loaned session (as uint8_t*).
/// @param key_expr   Null-terminated key expression string.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_liveliness_declare_token(
    uint8_t* token_out, const uint8_t* session, const char* key_expr);
/// Drops (undeclares and frees) a liveliness token.
///
/// @param token  Pointer to a z_owned_liveliness_token_t (as uint8_t*).
FFI_PLUGIN_EXPORT void zd_liveliness_token_drop(uint8_t* token);
/// Declares a liveliness subscriber on the given key expression.
///
/// Reuses the same z_owned_subscriber_t type and _zd_sample_callback/drop
/// as the regular subscriber. Samples are posted to the Dart NativePort.
///
/// @param subscriber_out  Pointer to an uninitialized z_owned_subscriber_t (as uint8_t*).
/// @param session         Const pointer to a loaned session (as uint8_t*).
/// @param key_expr        Null-terminated key expression string.
/// @param port            Dart NativePort for sample callbacks.
/// @param history         Boolean (0=false, 1=true) for receiving pre-existing token state.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_liveliness_declare_subscriber(
    uint8_t* subscriber_out, const uint8_t* session,
    const char* key_expr, int64_t port, int8_t history);