package/lib/src/bindings.dart


  /// Tries to receive a sample from the ring handler.
  ///
  /// Return codes: 0=sample available, 1=channel disconnected, 2=buffer empty.
  /// When 0, all out_ parameters are populated (malloc'd; caller must free).
  ///
  /// @param handler           Const pointer to an owned ring handler (as uint8_t*).
  /// @param out_keyexpr       Out: malloc'd null-terminated key expression string.
  /// @param out_payload       Out: malloc'd payload bytes.
  /// @param out_payload_len   Out: payload length.
  /// @param out_kind          Out: sample kind (0=put, 1=delete).
  /// @param out_encoding      Out: malloc'd null-terminated encoding string (or NULL).
  /// @param out_attachment     Out: malloc'd attachment bytes (or NULL).
  /// @param out_attachment_len Out: attachment length.
  /// @return 0=sample, 1=disconnected, 2=empty.
  int zd_pull_subscriber_try_recv(
    ffi.Pointer<ffi.Uint8> handler,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_keyexpr,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_payload,
    ffi.Pointer<ffi.Int32> out_payload_len,
    ffi.Pointer<ffi.Int8> out_kind,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_encoding,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out_attachment,
    ffi.Pointer<ffi.Int32> out_attachment_len,
  ) {
    return _zd_pull_subscriber_try_recv(
      handler,
      out_keyexpr,
      out_payload,
      out_payload_len,
      out_kind,
      out_encoding,
      out_attachment,
      out_attachment_len,
    );
  }

  late final _zd_pull_subscriber_try_recvPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int8>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('zd_pull_subscriber_try_recv');
  late final _zd_pull_subscriber_try_recv = _zd_pull_subscriber_try_recvPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int8>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// Drops (frees) the ring handler.
  ///
  /// @param handler  Pointer to a z_owned_ring_handler_sample_t (as uint8_t*).
  void zd_ring_handler_sample_drop(ffi.Pointer<ffi.Uint8> handler) {
    return _zd_ring_handler_sample_drop(handler);
  }

  late final _zd_ring_handler_sample_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_ring_handler_sample_drop',
      );
  late final _zd_ring_handler_sample_drop = _zd_ring_handler_sample_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  /// Returns the size of z_owned_querier_t in bytes.
  int zd_querier_sizeof() {
    return _zd_querier_sizeof();
  }

  late final _zd_querier_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_querier_sizeof');
  late final _zd_querier_sizeof = _zd_querier_sizeofPtr
      .asFunction<int Function()>();

  /// Declares a querier on the given key expression.
  ///
  /// @param querier_out    Pointer to uninitialized z_owned_querier_t (as uint8_t*).
  /// @param session        Pointer to a loaned session (as uint8_t*).
  /// @param key_expr       Null-terminated key expression string.
  /// @param target         Query target (z_query_target_t value).
  /// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
  /// @param timeout_ms     Timeout in milliseconds (0 = default).
  /// @return 0 on success, negative on failure.
  int zd_declare_querier(
    ffi.Pointer<ffi.Uint8> querier_out,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Char> key_expr,
    int target,
    int consolidation,
    int timeout_ms,
  ) {
    return _zd_declare_querier(
      querier_out,
      session,
      key_expr,
      target,
      consolidation,
      timeout_ms,
    );
  }

  late final _zd_declare_querierPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Int8,
            ffi.Int8,
            ffi.Uint64,
          )
        >
      >('zd_declare_querier');
  late final _zd_declare_querier = _zd_declare_querierPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
        )
      >();

  /// Drops (frees) the querier.
  ///
  /// @param querier  Pointer to a z_owned_querier_t (as uint8_t*).
  void zd_querier_drop(ffi.Pointer<ffi.Uint8> querier) {
    return _zd_querier_drop(querier);
  }

  late final _zd_querier_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_querier_drop',
      );
  late final _zd_querier_drop = _zd_querier_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  /// Sends a query via a declared querier.
  ///
  /// Replies are delivered asynchronously to the Dart NativePort.
  /// Reuses the same reply callback as zd_get.
  ///
  /// @param querier     Pointer to a z_owned_querier_t (as uint8_t*).
  /// @param parameters  Optional query parameters string (NULL for none).
  /// @param port        Dart NativePort for reply callbacks.
  /// @param payload     Optional z_owned_bytes_t* (consumed if non-NULL).
  /// @param encoding    Optional encoding string (NULL for none).
  /// @return 0 on success, negative on failure.
  int zd_querier_get(
    ffi.Pointer<ffi.Uint8> querier,
    ffi.Pointer<ffi.Char> parameters,
    int port,
    ffi.Pointer<ffi.Uint8> payload,
    ffi.Pointer<ffi.Char> encoding,
  ) {
    return _zd_querier_get(querier, parameters, port, payload, encoding);
  }

  late final _zd_querier_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('zd_querier_get');
  late final _zd_querier_get = _zd_querier_getPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Declares a background matching listener for a querier.
  ///
  /// Reuses the same matching status callback and drop function as publisher.
  ///
  /// @param querier    Pointer to a z_owned_querier_t (as uint8_t*).
  /// @param port       Dart NativePort for matching status callbacks.
  /// @return 0 on success, negative on failure.
  int zd_querier_declare_background_matching_listener(
    ffi.Pointer<ffi.Uint8> querier,
    int port,
  ) {
    return _zd_querier_declare_background_matching_listener(querier, port);
  }

  late final _zd_querier_declare_background_matching_listenerPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int8 Function(ffi.Pointer<ffi.Uint8>, ffi.Int64)>
      >('zd_querier_declare_background_matching_listener');
  late final _zd_querier_declare_background_matching_listener =
      _zd_querier_declare_background_matching_listenerPtr
          .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Gets the current matching status of a querier.
  ///
  /// @param querier        Pointer to a z_owned_querier_t (as uint8_t*).
  /// @param matching_out   Output: 1 if matching queryables exist, 0 otherwise.
  /// @return 0 on success, negative on failure.
  int zd_querier_get_matching_status(
    ffi.Pointer<ffi.Uint8> querier,
    ffi.Pointer<ffi.Int8> matching_out,
  ) {
    return _zd_querier_get_matching_status(querier, matching_out);
  }

  late final _zd_querier_get_matching_statusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Int8>)
        >
      >('zd_querier_get_matching_status');
  late final _zd_querier_get_matching_status =
      _zd_querier_get_matching_statusPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Int8>)
          >();

  /// Returns the size of z_owned_liveliness_token_t in bytes.
  int zd_liveliness_token_sizeof() {
    return _zd_liveliness_token_sizeof();
  }

  late final _zd_liveliness_token_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'zd_liveliness_token_sizeof',
      );
  late final _zd_liveliness_token_sizeof = _zd_liveliness_token_sizeofPtr
      .asFunction<int Function()>();

  /// Declares a liveliness token on the given key expression.
  ///
  /// @param token_out  Pointer to an uninitialized z_owned_liveliness_token_t (as uint8_t*).
  /// @param session    Const pointer to a loaned session (as uint8_t*).
  /// @param key_expr   Null-terminated key expression string.
  /// @return 0 on success, negative on failure.
  int zd_liveliness_declare_token(
    ffi.Pointer<ffi.Uint8> token_out,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Char> key_expr,
  ) {
    return _zd_liveliness_declare_token(token_out, session, key_expr);
  }

  late final _zd_liveliness_declare_tokenPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('zd_liveliness_declare_token');
  late final _zd_liveliness_declare_token = _zd_liveliness_declare_tokenPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Drops (undeclares and frees) a liveliness token.
  ///
  /// @param token  Pointer to a z_owned_liveliness_token_t (as uint8_t*).
  void zd_liveliness_token_drop(ffi.Pointer<ffi.Uint8> token) {
    return _zd_liveliness_token_drop(token);
  }

  late final _zd_liveliness_token_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_liveliness_token_drop',
      );
  late final _zd_liveliness_token_drop = _zd_liveliness_token_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  /// Declares a liveliness subscriber on the given key expression.
  ///
  /// Reuses the same z_owned_subscriber_t type and _zd_sample_callback/drop
  /// as the regular subscriber. Samples are posted to the Dart NativePort.
  ///
  /// @param subscriber_out  Pointer to an uninitialized z_owned_subscriber_t (as uint8_t*).
  /// @param session         Const pointer to a loaned session (as uint8_t*).
  /// @param key_expr        Null-terminated key expression string.
  /// @param port            Dart NativePort for sample callbacks.
  /// @param history         Boolean (0=false, 1=true) for receiving pre-existing token state.
  /// @return 0 on success, negative on failure.
  int zd_liveliness_declare_subscriber(
    ffi.Pointer<ffi.Uint8> subscriber_out,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Char> key_expr,
    int port,
    int history,
  ) {
    return _zd_liveliness_declare_subscriber(
      subscriber_out,
      session,
      key_expr,
      port,
      history,
    );
  }
